# opendart-llm-tools

./: .gitignore  README.md  pyproject.toml  web_financial_app.py
demo/: __init__.py  test_console.html  web_dart_test_app.py  web_financial_app.py  web_test_console.css  web_test_console.js
examples/: advanced_run_dart_tool_call.py  gemini_simple.py  openai_function_call.py
src/dart_llm_tools/: __init__.py  opendart_openai_function_tools.py
src/opendart_llm_tools/: __init__.py
use_cases/: HHocean_numbers.txt  HHsolution_PO.txt  Shinsegae_insider_trading.txt  bank_dividend_comp.txt  skhynix_earnings.txt  skhynix_earnings_log.txt
